@@ -1,7 +1,7 @@
 /*
  * This file is part of Universal Media Server, based on PS3 Media Server.
  *
- * This program is free software; you can redistribute it and/or
+ * This program is a free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
  * as published by the Free Software Foundation; version 2
  * of the License only.
@@ -17,7 +17,6 @@
  */
 package net.pms.newgui;
 
-import net.pms.newgui.util.ShortcutFileSystemView;
 import com.jgoodies.forms.builder.PanelBuilder;
 import com.jgoodies.forms.factories.Borders;
 import com.jgoodies.forms.layout.CellConstraints;
@@ -57,20 +56,21 @@ import net.pms.database.MediaDatabase;
 import net.pms.database.MediaTableFiles;
 import net.pms.database.MediaTableFilesStatus;
 import net.pms.dlna.Feed;
-import net.pms.dlna.LibraryScanner;
 import static net.pms.dlna.RootFolder.parseFeedKey;
 import static net.pms.dlna.RootFolder.parseFeedValue;
 import net.pms.newgui.components.AnimatedIcon;
 import net.pms.newgui.components.JAnimatedButton;
 import net.pms.newgui.components.JImageButton;
-import net.pms.util.FormLayoutUtil;
+import net.pms.newgui.util.FormLayoutUtil;
+import net.pms.newgui.util.ShortcutFileSystemView;
+import net.pms.service.LibraryScanner;
 import static org.apache.commons.lang3.StringUtils.isBlank;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 public class SharedContentTab {
 	private static final Vector<String> FOLDERS_COLUMN_NAMES = new Vector<>(
-		Arrays.asList(new String[] {Messages.getString("Folder"), Messages.getString("MonitorPlayedStatusFiles")})
+		List.of(Messages.getString("Folder"), Messages.getString("MonitorPlayedStatusFiles"))
 	);
 	private static final Logger LOGGER = LoggerFactory.getLogger(SharedContentTab.class);
 
@@ -116,7 +116,7 @@ public class SharedContentTab {
 	}
 
 	private final PmsConfiguration configuration;
-	private LooksFrame looksFrame;
+	private final LooksFrame looksFrame;
 
 	SharedContentTab(PmsConfiguration configuration, LooksFrame looksFrame) {
 		this.configuration = configuration;
@@ -155,20 +155,18 @@ public class SharedContentTab {
 			entryToAdd.append(configType).append(".").append(folders).append("=");
 
 			switch (configType) {
-				case "imagefeed":
-				case "videofeed":
-				case "audiofeed":
+				case "imagefeed", "videofeed", "audiofeed" -> {
 					entryToAdd.append(source);
 
 					if (resourceName != null) {
 						entryToAdd.append(",,,").append(resourceName);
 					}
-					break;
-				default:
+				}
+				default -> {
 					if (resourceName != null) {
 						entryToAdd.append(resourceName).append(",").append(source);
 					}
-					break;
+				}
 			}
 
 			entries.add(entryToAdd.toString());
@@ -220,8 +218,8 @@ public class SharedContentTab {
 
 		JScrollPane scrollPane = new JScrollPane(
 			panel,
-			JScrollPane.VERTICAL_SCROLLBAR_AS_NEEDED,
-			JScrollPane.HORIZONTAL_SCROLLBAR_AS_NEEDED
+			ScrollPaneConstants.VERTICAL_SCROLLBAR_AS_NEEDED,
+			ScrollPaneConstants.HORIZONTAL_SCROLLBAR_AS_NEEDED
 		);
 
 		scrollPane.setBorder(BorderFactory.createEmptyBorder());
@@ -492,23 +490,18 @@ public class SharedContentTab {
 
 			JComboBox<String> newEntryType = new JComboBox<>(TYPES_READABLE);
 			newEntryType.setEditable(false);
-			newEntryType.addItemListener(new ItemListener() {
-				@Override
-				public void itemStateChanged(ItemEvent e) {
-					if (
-						e.getItem().toString() == READABLE_TYPE_AUDIO_FEED ||
-						e.getItem().toString() == READABLE_TYPE_VIDEO_FEED ||
-						e.getItem().toString() == READABLE_TYPE_IMAGE_FEED
-					) {
-						newEntryName.setEnabled(false);
-						newEntryName.setText(Messages.getString("NamesSetAutomaticallyFeeds"));
-					} else if (
-						e.getItem().toString() == READABLE_TYPE_AUDIO_STREAM ||
-						e.getItem().toString() == READABLE_TYPE_VIDEO_STREAM
-					) {
-						newEntryName.setEnabled(true);
-						newEntryName.setText("");
-					}
+			newEntryType.addItemListener((ItemEvent e1) -> {
+				if (READABLE_TYPE_AUDIO_FEED.equals(e1.getItem().toString()) ||
+					READABLE_TYPE_VIDEO_FEED.equals(e1.getItem().toString()) ||
+					READABLE_TYPE_IMAGE_FEED.equals(e1.getItem().toString())
+				) {
+					newEntryName.setEnabled(false);
+					newEntryName.setText(Messages.getString("NamesSetAutomaticallyFeeds"));
+				} else if (READABLE_TYPE_AUDIO_STREAM.equals(e1.getItem().toString()) ||
+						READABLE_TYPE_VIDEO_STREAM.equals(e1.getItem().toString())
+				) {
+					newEntryName.setEnabled(true);
+					newEntryName.setText("");
 				}
 			});
 
@@ -587,14 +580,14 @@ public class SharedContentTab {
 					if (!isBlank(newEntrySource.getText())) {
 						try {
 							if (
-								newEntryType.getSelectedItem().toString() == READABLE_TYPE_IMAGE_FEED ||
-								newEntryType.getSelectedItem().toString() == READABLE_TYPE_AUDIO_FEED ||
-								newEntryType.getSelectedItem().toString() == READABLE_TYPE_VIDEO_FEED
+								READABLE_TYPE_IMAGE_FEED.equals(newEntryType.getSelectedItem().toString()) ||
+								READABLE_TYPE_AUDIO_FEED.equals(newEntryType.getSelectedItem().toString()) ||
+								READABLE_TYPE_VIDEO_FEED.equals(newEntryType.getSelectedItem().toString())
 							) {
 								resourceName = Feed.getFeedTitle(newEntrySource.getText());
 							} else if (
-								newEntryType.getSelectedItem().toString() == READABLE_TYPE_VIDEO_STREAM ||
-								newEntryType.getSelectedItem().toString() == READABLE_TYPE_AUDIO_STREAM
+								READABLE_TYPE_VIDEO_STREAM.equals(newEntryType.getSelectedItem().toString()) ||
+								READABLE_TYPE_AUDIO_STREAM.equals(newEntryType.getSelectedItem().toString())
 							) {
 								resourceName = newEntryName.getText();
 							}
@@ -696,7 +689,7 @@ public class SharedContentTab {
 			for (Path folder : folders) {
 				Vector rowVector = new Vector();
 				rowVector.add(folder.toString());
-				rowVector.add(Boolean.valueOf(foldersMonitored.contains(folder)));
+				rowVector.add(foldersMonitored.contains(folder));
 				newDataVector.add(rowVector);
 			}
 		}
@@ -801,7 +794,7 @@ public class SharedContentTab {
 	}
 
 	public class TableMouseListener extends MouseAdapter {
-		private JTable table;
+		private final JTable table;
 
 		public TableMouseListener(JTable table) {
 			this.table = table;
@@ -825,9 +818,9 @@ public class SharedContentTab {
 
 				JTextField newEntryName = new JTextField(25);
 				if (
-					currentType == READABLE_TYPE_AUDIO_FEED ||
-					currentType == READABLE_TYPE_VIDEO_FEED ||
-					currentType == READABLE_TYPE_IMAGE_FEED
+					READABLE_TYPE_AUDIO_FEED.equals(currentType) ||
+					READABLE_TYPE_VIDEO_FEED.equals(currentType) ||
+					READABLE_TYPE_IMAGE_FEED.equals(currentType)
 				) {
 					newEntryName.setEnabled(false);
 					newEntryName.setText(Messages.getString("NamesSetAutomaticallyFeeds"));
@@ -839,23 +832,20 @@ public class SharedContentTab {
 				JComboBox<String> newEntryType = new JComboBox<>(TYPES_READABLE);
 				newEntryType.setEditable(false);
 				newEntryType.setSelectedIndex(currentTypeIndex);
-				newEntryType.addItemListener(new ItemListener() {
-					@Override
-					public void itemStateChanged(ItemEvent e) {
-						if (
-							e.getItem().toString() == READABLE_TYPE_AUDIO_FEED ||
-							e.getItem().toString() == READABLE_TYPE_VIDEO_FEED ||
-							e.getItem().toString() == READABLE_TYPE_IMAGE_FEED
-						) {
-							newEntryName.setEnabled(false);
-							newEntryName.setText(Messages.getString("NamesSetAutomaticallyFeeds"));
-						} else if (
-							e.getItem().toString() == READABLE_TYPE_AUDIO_STREAM ||
-							e.getItem().toString() == READABLE_TYPE_VIDEO_STREAM
-						) {
-							newEntryName.setEnabled(true);
-							newEntryName.setText("");
-						}
+				newEntryType.addItemListener((ItemEvent e) -> {
+					if (
+						READABLE_TYPE_AUDIO_FEED.equals(e.getItem().toString()) ||
+						READABLE_TYPE_VIDEO_FEED.equals(e.getItem().toString()) ||
+						READABLE_TYPE_IMAGE_FEED.equals(e.getItem().toString())
+					) {
+						newEntryName.setEnabled(false);
+						newEntryName.setText(Messages.getString("NamesSetAutomaticallyFeeds"));
+					} else if (
+						READABLE_TYPE_AUDIO_STREAM.equals(e.getItem().toString()) ||
+						READABLE_TYPE_VIDEO_STREAM.equals(e.getItem().toString())
+					) {
+						newEntryName.setEnabled(true);
+						newEntryName.setText("");
 					}
 				});
 
